# p44ayabd

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
ayab_firmware/ayab/: settings.h
ayab_firmware/needed_arduino_libraries/: libraries  put_the_two_library_files_here
imgs/: emoj.acorn  test.acorn
mounting-plate/: p44ayab_mount_v1_rpi_b.dxf  p44ayab_mount_v2_rpi_bplus.afdesign
p44ayabd.xcodeproj/: project.pbxproj
p44ayabd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
p44ayabd.xcodeproj/xcuserdata/luz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
p44ayabd.xcodeproj/xcuserdata/luz.xcuserdatad/xcschemes/: p44ayabd.xcscheme  xcschememanagement.plist
p44ayabweb/: api.php  index.php  test.php
service/p44ayabd/: run
service/p44ayabd/log/: run
src/: ayabcomm.cpp  ayabcomm.hpp  p44ayabd.cpp  patterncontainer.cpp  patterncontainer.hpp  patternqueue.cpp  patternqueue.hpp
src/p44utils/: application.cpp  application.hpp  serialcomm.cpp  serialqueue.cpp  socketcomm.cpp
